# cybersec-slm-data-collection

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  _ind_keys.txt  audit_report.md  docker-compose.clamav.yml  docker-compose.searxng.yml  dvc.yaml  main.py  prefect.yaml  pyproject.toml  test_crawl.jsonl
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  credential-expiry.yml  deploy.yml  secrets-scan.yml
.kilo/plans/: 1784426901605-curate-green-feeds.md
.streamlit/: config.toml
docs/: Project_Documentation.docx  architecture.md  canonical_schema.md  cleaning_comparison.md  commands.md  complete-walkthrough.md  deploy.md  dvc.md  extraction_tools.md  ingestion_tools.md  main.tex  method2_domain_guide.md  new.tex  new3.tex  pii_limitations.md  pipeline-flow.md  profiles.md  risk_register.md  schema.md  security-requirements.md  source_criteria.md  source_evaluation.md  source_template.md  storage_strategy.md  tables.tex  week1_report.md
docs/architecture/: architecture.md  canonical_schema.md
docs/operations/: deploy.md  dvc.md
docs/sources/: legal_scope.md  source_acceptance_criteria.md  source_evaluation.md
docs/superpowers/plans/: 2026-07-03-dashboard-agent.md  2026-07-09-overlapped-ingest-clean.md  2026-07-11-scrapy-crawler-polars-ingestion.md  2026-07-12-five-stage-dashboard.md  2026-07-12-five-stage-pipeline-backend.md  2026-07-17-manual-source-add-with-split.md
docs/superpowers/specs/: 2026-07-02-dashboard-design.md  2026-07-03-dashboard-agent-design.md  2026-07-03-license-gate-design.md  2026-07-07-synthetic-data-flag-design.md  2026-07-09-overlapped-ingest-clean-design.md  2026-07-09-taxonomy-sources-frontend-design.md  2026-07-11-scrapy-crawler-polars-ingestion-design.md  2026-07-12-five-stage-pipeline-and-dashboard-design.md  2026-07-14-dashboard-ui-redesign-design.md  2026-07-14-sourcing-metadata-enrichment-design.md  2026-07-14-specific-row-selection-design.md  2026-07-15-dashboard-settings-simple-advanced-design.md  2026-07-15-per-stage-config-modals-design.md  2026-07-15-searxng-balanced-sourcing-design.md  2026-07-17-manual-source-add-with-split-design.md
extraction/: README.md
infra/: main.tf  outputs.tf  variables.tf
logs/: README.md
raw_data/: README.md
searxng/: settings.yml
secrets/: credentials.enc.yaml  credentials.yaml.example
sources/: Sources.csv  active_profile  allowlist.yaml  keywords.yaml  master_source_list.md  source_registry.csv
sources/profiles/cybersec/: Blacklist.csv  Sources.csv  sourcing.yaml
sources/profiles/ubi/: Blacklist.csv  Excluded.csv  Sources.archived-20260721.csv  Sources.csv  harvest.yaml  hybrid_config.yaml  keywords.yaml  sourcing.yaml
src/cybersec_slm/: cli.py  core.py  llm.py  stages.py
src/cybersec_slm/cleaning/: README.md  anomaly.py  balance.py  canary.py  common.py  dedup.py  langfilter.py  pii.py  pipeline.py  run.py  sanitize.py  schema.py  textmap.py  translate.py
src/cybersec_slm/dashboard/: README.md  __init__.py  agent_client.py  agent_tools.py  app.py  cached.py  charts.py  control.py  data.py  final_stats.py  launch.py  rebalance.py  run_all.py  run_fix.py  run_test.py  schema_store.py  security.py  settings_store.py  theme.py  ui.py  viz.py
src/cybersec_slm/discovery/: keywords.py  run.py  search.py
src/cybersec_slm/eda/: __init__.py  config.py  metrics.py  pipeline.py
src/cybersec_slm/extraction/: README.md  allowlist.py  common.py  fetch.py  fetch_nvd.py  manifest.py  parallel.py  run.py  scrape.py  scrape_html.py  sources.py  worker.py
tests/: conftest.py  test_cli_source_timeout.py  test_cli_stages.py  test_core.py  test_profile_isolation.py  test_sops_credentials.py  test_stages.py
tests/cleaning/: test_anomaly.py  test_canary.py  test_clean_source_folder.py  test_common.py  test_dedup.py  test_langfilter.py  test_pii.py  test_pipeline.py  test_purge_translated.py  test_sanitize.py  test_textmap.py  test_translate.py
tests/dashboard/: conftest.py  test_agent_client.py  test_agent_tools.py  test_app_smoke.py  test_control.py  test_data.py  test_eda_page.py  test_filter_tab.py  test_final_stats.py  test_full_plan.py  test_profile_switcher.py  test_quick_finish.py  test_rebalance.py  test_run_all.py  test_run_fix.py  test_run_test.py  test_security.py  test_settings_store.py  test_sourcing_page.py  test_sourcing_totals.py  test_stage_pages.py  test_ui.py
tests/eda/: test_eda.py
tests/extraction/: test_allowlist.py  test_catalog.py
tests/ingestion/: test_allowlist.py  test_archive_guard.py  test_av_scan.py  test_binscan.py  test_catalog.py  test_common.py  test_crawl_runner.py  test_domain_mapping.py  test_extractor_choice.py  test_fetch_provenance.py  test_hazard_scan.py  test_ingest_clean_overlap.py  test_ingest_clean_timeout.py  test_license_gate.py  test_light_eda.py  test_parallel_resume.py  test_polars_convert.py  test_rss.py  test_run_clean.py  test_run_ingest.py  test_run_pool.py  test_scrape_html.py  test_synthetic_sources.py  test_urlscreen.py  test_v2_pipeline_wiring.py  test_worker.py  test_worker_fetch_only.py
tests/normalize/: test_dedup.py  test_manifest.py  test_mappers_enrich.py  test_pipeline.py  test_schema.py  test_synthetic_exclusion.py
tests/orchestration/: test_flows.py
tests/sourcing/: conftest.py  test_backfill.py  test_blacklist.py  test_catalog.py  test_discovery_funnel.py  test_engine.py  test_enrich.py  test_harvest.py  test_license_detect.py  test_profiles.py  test_quality.py  test_review.py  test_sourcing.py  test_stats.py  test_synthetic_scan.py
tools/: add_rbi_and_union.py  build_allowlist.py  check_credential_expiry.py  check_csv.py  check_disclosures.py  clean_by_domain.py  clean_quantum.py  clean_sources.py  fix_and_fill_sources_v2.py  heal.py  mark_cleaned.py  pii_sample_review.py  prune_sources.py  purge_translated.py  rebuild_nocap.py  run_individual_stages_by_domain.py  run_pipeline_resumable.ps1
tools/legacy/: README.md  crawl_union_bank_pdfs.py  direct_source.py  fix_and_fill_sources.py
(+95 files in other folders)
