[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybersec-slm-data-pipeline"
version = "0.1.0"
description = "Collect, clean, and consolidate cybersecurity text data for SLM training."
readme = "README.md"
requires-python = ">=3.13"
# Dependencies reflect what the extraction pipeline actually imports:
#   common.py    -> pandas, loguru, httpx, tenacity, json-repair, orjson, pyarrow
#   fetch.py     -> huggingface-hub, kaggle
#   scrape.py    -> pymupdf, orjson
#   scrape_html.py -> selectolax, playwright
dependencies = [
    "httpx>=0.27.0",
    "huggingface-hub>=0.25.0",
    "json-repair>=0.30.0",
    "kaggle>=1.6.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.0",
    "orjson>=3.10.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",      # load .env so API keys reach os.environ
    "pyyaml>=6.0",               # version-controlled source allowlist (extraction/allowlist.py)
    "selectolax>=0.3.0",
    "tenacity>=9.0.0",
]

# The cleaning stage runs on the standard library alone (built-in fallbacks).
# Install this group to upgrade each cleaning stage to its named tool.
# Note: presidio also needs a spaCy model (python -m spacy download en_core_web_lg)
# and fasttext needs a lid.176 model file in cleaning/ (or set FASTTEXT_LID_MODEL).
[project.optional-dependencies]
cleaning = [
    "ftfy>=6.2.0",               # encoding/mojibake repair (sanitize)
    "python-dateutil>=2.9.0",    # flexible date parsing -> ISO (sanitize)
    "datasketch>=1.6.0",         # MinHash + LSH near-duplicate detection (dedup)
    "presidio-analyzer>=2.2",    # PII detection (pii)
    "presidio-anonymizer>=2.2",  # PII redaction (pii)
    "fasttext-wheel>=0.9.2",     # language id (langfilter)
    "langdetect>=1.0.9",         # language id fallback (langfilter)
    "deep-translator>=1.11.0",   # translate non-English -> English (translate)
]
# Search-engine source discovery (cybersec-slm discover). The search call and
# dedup read use httpx (already a core dep); only the live append to the Google
# Sheet needs these Google client libraries.
discovery = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",          # supply-chain vulnerability audit (threat model: Blind Dependencies)
    "pre-commit>=3.7.0",         # local secrets/lint hooks (threat model: Unmonitored Code)
]

[project.scripts]
cybersec-slm = "cybersec_slm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cybersec_slm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E402",   # deliberate late imports (optional deps / ordering)
    "E702",   # deliberate `a(); b()` one-liners (e.g. cw.close(); fw.close())
]
