[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybersec-slm-data-pipeline"
version = "0.1.0"
description = "Collect, clean, and consolidate cybersecurity text data for SLM training."
readme = "README.md"
requires-python = ">=3.13"
# Everything the pipeline needs to run at full quality, in one place: a plain
# `uv sync` (or `pip install .`) installs all of it — no extras to remember.
# The code still degrades gracefully if a package is somehow missing (cleaning
# falls back to stdlib regex/heuristics), but a normal install never hits that.
#
# Two assets aren't Python packages and can't be pulled in as deps:
#   - the Playwright browser   -> `playwright install chromium` (HTML crawler)
#   - the fastText lid.176 .bin -> optional; langfilter falls back without it
# The presidio spaCy model IS wired in below via [tool.uv.sources].
dependencies = [
    # --- core ingestion / runtime ---
    "httpx>=0.27.0",
    "huggingface-hub>=0.25.0",
    "json-repair>=0.30.0",
    "kaggle>=1.6.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.0",
    "orjson>=3.10.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",      # load .env so API keys reach os.environ
    "pyyaml>=6.0",               # the profile taxonomy (sources/profiles/*/keywords.yaml)
    "selectolax>=0.3.0",
    "scrapy>=2.11",             # website crawler engine (ingestion/crawl_runner.py)
    "scrapy-playwright>=0.0.40",# JS rendering for crawls flagged use_js (lazy)
    "polars>=1.0",              # lazy fast path for large csv/parquet/jsonl -> jsonl
    "tenacity>=9.0.0",
    # --- cleaning (sanitize / dedup / pii / langfilter / translate) ---
    "ftfy>=6.2.0",               # encoding/mojibake repair (sanitize)
    "python-dateutil>=2.9.0",    # flexible date parsing -> ISO (sanitize)
    "datasketch>=1.6.0",         # MinHash + LSH near-duplicate detection (dedup)
    # NOTE: PII redaction needs no dependency at all — the default `regex` engine is
    # stdlib. Presidio + its spaCy model are the opt-in `pii-ner` extra below.
    "fasttext-predict>=0.9.2",   # language id (langfilter); prebuilt wheels incl. cp313/win
                                 # (fasttext-wheel has no cp313 wheel -> source build needs MSVC)
    "langdetect>=1.0.9",         # language id fallback (langfilter)
    "deep-translator>=1.11.0",   # translate non-English -> English (translate)
    # --- sourcing (cybersec-slm source -> append rows to the tracking sheet) ---
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
]

# Two stage tools are intentionally opt-in, because neither can run in the
# default local environment:
#
#   orchestration  Prefect + prefect-aws power `cybersec-slm flow` and the AWS/ECS
#                  deployment. `cybersec-slm all` already runs the same pipeline
#                  locally without them, they drag in ~100 transitive packages,
#                  and on Windows their `whenever` extension ships a DLL that
#                  Smart App Control / WDAC blocks ("Application Control policy
#                  has blocked this file"). Install for the hosted path only:
#                      uv sync --extra orchestration
#
#   profiling      ydata-profiling (the optional `eda --profile` HTML report)
#                  caps pandas <3.0, which is unsatisfiable against the pinned
#                  pandas>=3.0 — it can't share this environment at all. The EDA
#                  *sufficiency gate* runs on the stdlib regardless; only the
#                  cosmetic HTML profile needs it. Generate one in a throwaway
#                  env when you want it: `uvx --with 'pandas<3' ydata-profiling`.
[project.optional-dependencies]
orchestration = [
    "prefect>=3.0.0",
    "prefect-aws>=0.5.0",
]

# NER-based PII detection for `--pii-engine presidio` (the Clean page's advanced
# settings). Opt-in, and NOT the default, on measured grounds: Presidio on every
# record cost ~135 ms — 95.6% of the whole clean stage — while its default
# recognizer set redacted so much non-PII that 99% of removed characters were not
# PII (timestamps became <PHONE_NUMBER>, `SIEM` became <LOCATION>, URLs were
# destroyed). The regex engine is ~300-700x faster and was measured to find MORE
# true PII. FineWeb and Dolma both use regex for PII; neither uses NER.
#
# Selecting this engine adds a scoped person-name pass on top of regex, for a
# deliberate audit run. It drags in spacy/thinc and a ~600 MB model, which is why
# a normal install skips it entirely:
#     uv sync --extra pii-ner
pii-ner = [
    "presidio-analyzer>=2.2",    # PII detection (pii)
    "presidio-anonymizer>=2.2",  # PII redaction (pii)
    "en-core-web-lg",            # spaCy model presidio's NLP engine loads (see [tool.uv.sources])
]

# Main-content extraction for the website crawl (`ingest --extractor trafilatura`).
# Optional on purpose: the crawl falls back to the built-in extractor when it is
# absent, so this is a quality upgrade you opt into rather than a hard dependency.
# UPSTREAM adbar/trafilatura only -- this parses hostile input from the open
# internet, which is not a place to run a fork of unknown divergence.
crawl = [
    "trafilatura>=1.12",
]

# Local-first monitoring + dataset-exploration dashboard (`cybersec-slm dashboard`).
# Streamlit bundles Altair, so charts need no extra dependency. Opt-in because the
# core pipeline never needs a web server:  uv sync --extra dashboard
dashboard = [
    "streamlit>=1.40",
    "psutil>=5.9",               # pipeline process control (start/stop/reset) on the Pipeline page
    "altair>=5",                 # the stage-activity timeline on the Overview page
]

# Q&A agent on the dashboard's Agent page (`pages/3_Agent.py`), backed by
# NVIDIA NIM. NIM exposes an OpenAI-compatible endpoint, so the standard
# `openai` SDK works unmodified by pointing `base_url` at NIM. Opt-in, same as
# `dashboard`:  uv sync --extra dashboard --extra agent
agent = [
    "openai>=1.0",
]

# Dev-only tooling. uv installs this group by default on `uv sync`; the
# production image opts out with `uv sync --no-dev` to stay lean.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",          # supply-chain vulnerability audit (threat model: Blind Dependencies)
    "pre-commit>=3.7.0",         # local secrets/lint hooks (threat model: Unmonitored Code)
]

# setuptools < 83.0.0 carries PYSEC-2026-3447 (an sdist path-traversal on macOS
# APFS/HFS+); it is pulled in transitively by spacy/thinc. Constrain to the fixed
# release so the CI supply-chain audit (pip-audit) stays green.
[tool.uv]
constraint-dependencies = ["setuptools>=83.0.0"]

# The presidio NLP engine loads the large English spaCy model by name; pin its
# release wheel so `uv sync --extra pii-ner` installs it (no separate
# `python -m spacy download`). Unused unless that extra is selected.
[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[project.scripts]
cybersec-slm = "cybersec_slm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cybersec_slm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E402",   # deliberate late imports (optional deps / ordering)
    "E702",   # deliberate `a(); b()` one-liners (e.g. cw.close(); fw.close())
]
